# Python-Live-Chat

./: .gitignore  LICENSE  README.md  main.py  main.pyw  pyproject.toml  requirements.txt
.github/workflows/: release.yml
livechat/: __init__.py  livechat.py  livechat_window.py  popup.py
scripts/: auto_lauch_setup.sh  auto_updater.sh  autolauch.sh  uninstall.sh
src/: __init__.py  app.py  livechat.py  livechat_window.py  popup.py  receiver.py  receiver_app.py  register.py  sender.py  utils.py
tests/: test_sender_receiver.py
ui/: livechat V2.ui  livechat.ui  receiver.ui
