[project]
name = "livechat"
version = "0.1.0"
authors = [
    {name="MaitreRenard18", email="maitre.renardowo@gmail.com"}
]
description = "A program to display images and gif on other computers within same network."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Communications :: Chat",
    "Natural Language :: English",
]

dependencies = [
    "PyQt5==5.15.11",
    "PyQt5-Qt5==5.15.2",
    "PyQt5_sip==12.15.0"
]

[project.scripts]
livechat = "livechat.livechat:main"

[project.urls]
Homepage = "https://github.com/MaitreRenard18/Python-Live-Chat"
Issues = "https://github.com/MaitreRenard18/Python-Live-Chat/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "LICENSE",
    "README.md",
    "livechat/*.py",
    "ui/*.ui",
    "ui/icons/*.png",
    "assets/icons/*.ico",
    "assets/screenshots/*.png",
]
